# DPGenius

./: .gitignore  pacakge_utils.py  pyproject.toml
dpgenius/: __init__.py  default_config.py  default_layout.py  default_viewport.py  default_window.py  predefined_windows.py
test/: test_app.py  test_fixtures.py
